// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentBar /> should be visible if prop visible is true 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <I18nProvider
    lang="en-US"
    locales={
      Object {
        "shipping.free_short": "Free",
      }
    }
  >
    <PaymentBar
      currency="USD"
      visible={true}
    >
      <Sheet
        animation={
          Object {
            "in": "css-31n36f",
            "out": "css-gyrv08",
          }
        }
        backdrop={false}
        duration={300}
        isOpen={true}
        onClose={[Function]}
        onOpen={[Function]}
        title=""
      >
        <section>
          <Drawer
            alwaysActive={false}
            animation={
              Object {
                "duration": 300,
                "in": "css-31n36f",
                "out": "css-gyrv08",
              }
            }
            className="css-h69706"
            isOpen={true}
            onClose={[Function]}
            onDidClose={[Function]}
            onOpen={[Function]}
          >
            <div
              className="css-h69706 css-1rg7udn css-31n36f"
              onAnimationEnd={[Function]}
              style={
                Object {
                  "animationDuration": "300ms",
                }
              }
            >
              <div
                className="css-1aon90l css-k5vpvg"
                onScroll={[Function]}
              >
                <Consume
                  context={
                    Object {
                      "Consumer": [Function],
                    }
                  }
                  key=".0"
                  onClose={[Function]}
                  props={
                    Object {
                      "setBottom": "setBottom",
                    }
                  }
                >
                  <Consumer>
                    <PaymentBarContent
                      setBottom={
                        [MockFunction] {
                          "calls": Array [
                            Array [
                              0,
                            ],
                            Array [
                              0,
                            ],
                            Array [
                              0,
                            ],
                            Array [
                              0,
                            ],
                            Array [
                              0,
                            ],
                          ],
                          "results": Array [
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                          ],
                        }
                      }
                    >
                      <div>
                        <Portal
                          name="cart.payment-bar.before"
                          props={null}
                        />
                        <Portal
                          name="cart.payment-bar"
                          props={null}
                        >
                          <Grid
                            className="css-7hjff2"
                            component="ul"
                            wrap={false}
                          >
                            <ul
                              className="css-7hjff2 css-h7r55a"
                            >
                              <GridItem
                                className="css-1e1nulz"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-1e1nulz css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <SubTotalLabel
                                      isDisabled={false}
                                    >
                                      <div
                                        className=""
                                      >
                                        <Translate
                                          className=""
                                          params={Object {}}
                                          string="cart.subtotal"
                                        >
                                          <span
                                            className=""
                                          >
                                            cart.subtotal
                                          </span>
                                        </Translate>
                                        :
                                      </div>
                                    </SubTotalLabel>
                                    <ShippingCostsLabel
                                      isDisabled={false}
                                      shipping={2.99}
                                    >
                                      <div
                                        className="css-1h55xt0 "
                                        data-test-id="shippingLabel"
                                      >
                                        <Translate
                                          className=""
                                          params={Object {}}
                                          string="titles.shipping"
                                        >
                                          <span
                                            className=""
                                          >
                                            titles.shipping
                                          </span>
                                        </Translate>
                                        :
                                      </div>
                                    </ShippingCostsLabel>
                                  </div>
                                </li>
                              </GridItem>
                              <GridItem
                                className="css-127o4v1"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-127o4v1 css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <SubTotal
                                      currency="USD"
                                      isDisabled={false}
                                      value={4.99}
                                    >
                                      <div
                                        className="css-syjz65 "
                                        data-test-id="subTotal: 4.99"
                                      >
                                        <FormatPrice
                                          className=""
                                          currency="USD"
                                          fractions={true}
                                          price={4.99}
                                        >
                                          <span
                                            className=""
                                          >
                                            $4.99
                                          </span>
                                        </FormatPrice>
                                      </div>
                                    </SubTotal>
                                    <ShippingCosts
                                      currency="USD"
                                      isDisabled={false}
                                      value={2.99}
                                    >
                                      <div
                                        className="css-13f0gfi "
                                      >
                                        <FormatPrice
                                          className=""
                                          currency="USD"
                                          fractions={true}
                                          price={2.99}
                                        >
                                          <span
                                            className=""
                                          >
                                            $2.99
                                          </span>
                                        </FormatPrice>
                                      </div>
                                    </ShippingCosts>
                                  </div>
                                </li>
                              </GridItem>
                              <GridItem
                                className="css-127o4v1"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-127o4v1 css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <div
                                      className="css-tmwobs"
                                    >
                                      <CheckoutButton
                                        isActive={true}
                                        pushHistory={[Function]}
                                      >
                                        <Connect(Link)
                                          disabled={false}
                                          href="/checkout"
                                        >
                                          <Link
                                            className=""
                                            disabled={false}
                                            historyPush={[Function]}
                                            historyReplace={[Function]}
                                            href="/checkout"
                                            replace={false}
                                            state={Object {}}
                                            tag="div"
                                          >
                                            <div
                                              className="css-c6ki83 "
                                              data-test-id="link: /checkout"
                                              onClick={[Function]}
                                              role="link"
                                            >
                                              <RippleButton
                                                className="css-1mlc9hd"
                                                disabled={false}
                                                flat={false}
                                                onClick={null}
                                                rippleClassName=""
                                                rippleSize={null}
                                                testId="Button"
                                                type="regular"
                                                wrapContent={true}
                                              >
                                                <Button
                                                  className="css-1mlc9hd"
                                                  disabled={false}
                                                  flat={false}
                                                  onClick={null}
                                                  testId="Button"
                                                  type="regular"
                                                  wrapContent={false}
                                                >
                                                  <Button
                                                    className="css-kevfw8 css-1mlc9hd"
                                                    disabled={false}
                                                    onClick={null}
                                                    testId="Button"
                                                  >
                                                    <button
                                                      className="css-kevfw8 css-1mlc9hd css-1rn65c0"
                                                      data-test-id="Button"
                                                      disabled={false}
                                                      onClick={null}
                                                    >
                                                      <Ripple
                                                        className="css-8s1fw2 "
                                                        color="#000"
                                                        disabled={false}
                                                        fill={true}
                                                        onClick={[Function]}
                                                        onComplete={[Function]}
                                                        overflow={false}
                                                        size={null}
                                                      >
                                                        <div
                                                          aria-hidden={true}
                                                          className="css-8s1fw2 "
                                                          data-test-id="Ripple"
                                                          onClick={[Function]}
                                                          style={null}
                                                        >
                                                          <Translate
                                                            className=""
                                                            params={Object {}}
                                                            string="cart.checkout"
                                                          >
                                                            <span
                                                              className=""
                                                            >
                                                              cart.checkout
                                                            </span>
                                                          </Translate>
                                                        </div>
                                                      </Ripple>
                                                    </button>
                                                  </Button>
                                                </Button>
                                              </RippleButton>
                                            </div>
                                          </Link>
                                        </Connect(Link)>
                                      </CheckoutButton>
                                    </div>
                                  </div>
                                </li>
                              </GridItem>
                            </ul>
                          </Grid>
                        </Portal>
                        <Portal
                          name="cart.payment-bar.after"
                          props={null}
                        />
                      </div>
                    </PaymentBarContent>
                  </Consumer>
                </Consume>
              </div>
            </div>
          </Drawer>
        </section>
      </Sheet>
    </PaymentBar>
  </I18nProvider>
</Provider>
`;

exports[`<PaymentBar /> should disable the component, if the isDisabled prop is true 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <I18nProvider
    lang="en-US"
    locales={
      Object {
        "shipping.free_short": "Free",
      }
    }
  >
    <PaymentBar
      currency="USD"
      isDisabled={true}
      visible={true}
    >
      <Sheet
        animation={
          Object {
            "in": "css-31n36f",
            "out": "css-gyrv08",
          }
        }
        backdrop={false}
        duration={300}
        isOpen={true}
        onClose={[Function]}
        onOpen={[Function]}
        title=""
      >
        <section>
          <Drawer
            alwaysActive={false}
            animation={
              Object {
                "duration": 300,
                "in": "css-31n36f",
                "out": "css-gyrv08",
              }
            }
            className="css-h69706"
            isOpen={true}
            onClose={[Function]}
            onDidClose={[Function]}
            onOpen={[Function]}
          >
            <div
              className="css-h69706 css-1rg7udn css-31n36f"
              onAnimationEnd={[Function]}
              style={
                Object {
                  "animationDuration": "300ms",
                }
              }
            >
              <div
                className="css-1aon90l css-k5vpvg"
                onScroll={[Function]}
              >
                <Consume
                  context={
                    Object {
                      "Consumer": [Function],
                    }
                  }
                  key=".0"
                  onClose={[Function]}
                  props={
                    Object {
                      "setBottom": "setBottom",
                    }
                  }
                >
                  <Consumer>
                    <PaymentBarContent
                      setBottom={
                        [MockFunction] {
                          "calls": Array [
                            Array [
                              0,
                            ],
                            Array [
                              0,
                            ],
                            Array [
                              0,
                            ],
                            Array [
                              0,
                            ],
                          ],
                          "results": Array [
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                          ],
                        }
                      }
                    >
                      <div>
                        <Portal
                          name="cart.payment-bar.before"
                          props={null}
                        />
                        <Portal
                          name="cart.payment-bar"
                          props={null}
                        >
                          <Grid
                            className="css-7hjff2"
                            component="ul"
                            wrap={false}
                          >
                            <ul
                              className="css-7hjff2 css-h7r55a"
                            >
                              <GridItem
                                className="css-1e1nulz"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-1e1nulz css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <SubTotalLabel
                                      isDisabled={false}
                                    >
                                      <div
                                        className=""
                                      >
                                        <Translate
                                          className=""
                                          params={Object {}}
                                          string="cart.subtotal"
                                        >
                                          <span
                                            className=""
                                          >
                                            cart.subtotal
                                          </span>
                                        </Translate>
                                        :
                                      </div>
                                    </SubTotalLabel>
                                    <ShippingCostsLabel
                                      isDisabled={false}
                                      shipping={2.99}
                                    >
                                      <div
                                        className="css-1h55xt0 "
                                        data-test-id="shippingLabel"
                                      >
                                        <Translate
                                          className=""
                                          params={Object {}}
                                          string="titles.shipping"
                                        >
                                          <span
                                            className=""
                                          >
                                            titles.shipping
                                          </span>
                                        </Translate>
                                        :
                                      </div>
                                    </ShippingCostsLabel>
                                  </div>
                                </li>
                              </GridItem>
                              <GridItem
                                className="css-127o4v1"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-127o4v1 css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <SubTotal
                                      currency="USD"
                                      isDisabled={false}
                                      value={4.99}
                                    >
                                      <div
                                        className="css-syjz65 "
                                        data-test-id="subTotal: 4.99"
                                      >
                                        <FormatPrice
                                          className=""
                                          currency="USD"
                                          fractions={true}
                                          price={4.99}
                                        >
                                          <span
                                            className=""
                                          >
                                            $4.99
                                          </span>
                                        </FormatPrice>
                                      </div>
                                    </SubTotal>
                                    <ShippingCosts
                                      currency="USD"
                                      isDisabled={false}
                                      value={2.99}
                                    >
                                      <div
                                        className="css-13f0gfi "
                                      >
                                        <FormatPrice
                                          className=""
                                          currency="USD"
                                          fractions={true}
                                          price={2.99}
                                        >
                                          <span
                                            className=""
                                          >
                                            $2.99
                                          </span>
                                        </FormatPrice>
                                      </div>
                                    </ShippingCosts>
                                  </div>
                                </li>
                              </GridItem>
                              <GridItem
                                className="css-127o4v1"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-127o4v1 css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <div
                                      className="css-tmwobs"
                                    >
                                      <CheckoutButton
                                        isActive={true}
                                        pushHistory={[Function]}
                                      >
                                        <Connect(Link)
                                          disabled={false}
                                          href="/checkout"
                                        >
                                          <Link
                                            className=""
                                            disabled={false}
                                            historyPush={[Function]}
                                            historyReplace={[Function]}
                                            href="/checkout"
                                            replace={false}
                                            state={Object {}}
                                            tag="div"
                                          >
                                            <div
                                              className="css-c6ki83 "
                                              data-test-id="link: /checkout"
                                              onClick={[Function]}
                                              role="link"
                                            >
                                              <RippleButton
                                                className="css-1mlc9hd"
                                                disabled={false}
                                                flat={false}
                                                onClick={null}
                                                rippleClassName=""
                                                rippleSize={null}
                                                testId="Button"
                                                type="regular"
                                                wrapContent={true}
                                              >
                                                <Button
                                                  className="css-1mlc9hd"
                                                  disabled={false}
                                                  flat={false}
                                                  onClick={null}
                                                  testId="Button"
                                                  type="regular"
                                                  wrapContent={false}
                                                >
                                                  <Button
                                                    className="css-kevfw8 css-1mlc9hd"
                                                    disabled={false}
                                                    onClick={null}
                                                    testId="Button"
                                                  >
                                                    <button
                                                      className="css-kevfw8 css-1mlc9hd css-1rn65c0"
                                                      data-test-id="Button"
                                                      disabled={false}
                                                      onClick={null}
                                                    >
                                                      <Ripple
                                                        className="css-8s1fw2 "
                                                        color="#000"
                                                        disabled={false}
                                                        fill={true}
                                                        onClick={[Function]}
                                                        onComplete={[Function]}
                                                        overflow={false}
                                                        size={null}
                                                      >
                                                        <div
                                                          aria-hidden={true}
                                                          className="css-8s1fw2 "
                                                          data-test-id="Ripple"
                                                          onClick={[Function]}
                                                          style={null}
                                                        >
                                                          <Translate
                                                            className=""
                                                            params={Object {}}
                                                            string="cart.checkout"
                                                          >
                                                            <span
                                                              className=""
                                                            >
                                                              cart.checkout
                                                            </span>
                                                          </Translate>
                                                        </div>
                                                      </Ripple>
                                                    </button>
                                                  </Button>
                                                </Button>
                                              </RippleButton>
                                            </div>
                                          </Link>
                                        </Connect(Link)>
                                      </CheckoutButton>
                                    </div>
                                  </div>
                                </li>
                              </GridItem>
                            </ul>
                          </Grid>
                        </Portal>
                        <Portal
                          name="cart.payment-bar.after"
                          props={null}
                        />
                      </div>
                    </PaymentBarContent>
                  </Consumer>
                </Consume>
              </div>
            </div>
          </Drawer>
        </section>
      </Sheet>
    </PaymentBar>
  </I18nProvider>
</Provider>
`;

exports[`<PaymentBar /> should not be visible if prop visible is false 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <I18nProvider
    lang="en-US"
    locales={
      Object {
        "shipping.free_short": "Free",
      }
    }
  >
    <PaymentBar
      currency="USD"
      visible={false}
    >
      <Sheet
        animation={
          Object {
            "in": "css-31n36f",
            "out": "css-gyrv08",
          }
        }
        backdrop={false}
        duration={300}
        isOpen={false}
        onClose={[Function]}
        onOpen={[Function]}
        title=""
      >
        <section>
          <Drawer
            alwaysActive={false}
            animation={
              Object {
                "duration": 300,
                "in": "css-31n36f",
                "out": "css-gyrv08",
              }
            }
            className="css-h69706"
            isOpen={false}
            onClose={[Function]}
            onDidClose={[Function]}
            onOpen={[Function]}
          />
        </section>
      </Sheet>
    </PaymentBar>
  </I18nProvider>
</Provider>
`;

exports[`<PaymentBar /> should render without any props 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <I18nProvider
    lang="en-US"
    locales={
      Object {
        "shipping.free_short": "Free",
      }
    }
  >
    <PaymentBar
      currency="USD"
      visible={true}
    >
      <Sheet
        animation={
          Object {
            "in": "css-31n36f",
            "out": "css-gyrv08",
          }
        }
        backdrop={false}
        duration={300}
        isOpen={true}
        onClose={[Function]}
        onOpen={[Function]}
        title=""
      >
        <section>
          <Drawer
            alwaysActive={false}
            animation={
              Object {
                "duration": 300,
                "in": "css-31n36f",
                "out": "css-gyrv08",
              }
            }
            className="css-h69706"
            isOpen={true}
            onClose={[Function]}
            onDidClose={[Function]}
            onOpen={[Function]}
          >
            <div
              className="css-h69706 css-1rg7udn css-31n36f"
              onAnimationEnd={[Function]}
              style={
                Object {
                  "animationDuration": "300ms",
                }
              }
            >
              <div
                className="css-1aon90l css-k5vpvg"
                onScroll={[Function]}
              >
                <Consume
                  context={
                    Object {
                      "Consumer": [Function],
                    }
                  }
                  key=".0"
                  onClose={[Function]}
                  props={
                    Object {
                      "setBottom": "setBottom",
                    }
                  }
                >
                  <Consumer>
                    <PaymentBarContent
                      setBottom={
                        [MockFunction] {
                          "calls": Array [
                            Array [
                              0,
                            ],
                          ],
                          "results": Array [
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                          ],
                        }
                      }
                    >
                      <div>
                        <Portal
                          name="cart.payment-bar.before"
                          props={null}
                        />
                        <Portal
                          name="cart.payment-bar"
                          props={null}
                        >
                          <Grid
                            className="css-7hjff2"
                            component="ul"
                            wrap={false}
                          >
                            <ul
                              className="css-7hjff2 css-h7r55a"
                            >
                              <GridItem
                                className="css-1e1nulz"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-1e1nulz css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <SubTotalLabel
                                      isDisabled={false}
                                    >
                                      <div
                                        className=""
                                      >
                                        <Translate
                                          className=""
                                          params={Object {}}
                                          string="cart.subtotal"
                                        >
                                          <span
                                            className=""
                                          >
                                            cart.subtotal
                                          </span>
                                        </Translate>
                                        :
                                      </div>
                                    </SubTotalLabel>
                                    <ShippingCostsLabel
                                      isDisabled={false}
                                      shipping={2.99}
                                    >
                                      <div
                                        className="css-1h55xt0 "
                                        data-test-id="shippingLabel"
                                      >
                                        <Translate
                                          className=""
                                          params={Object {}}
                                          string="titles.shipping"
                                        >
                                          <span
                                            className=""
                                          >
                                            titles.shipping
                                          </span>
                                        </Translate>
                                        :
                                      </div>
                                    </ShippingCostsLabel>
                                  </div>
                                </li>
                              </GridItem>
                              <GridItem
                                className="css-127o4v1"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-127o4v1 css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <SubTotal
                                      currency="USD"
                                      isDisabled={false}
                                      value={4.99}
                                    >
                                      <div
                                        className="css-syjz65 "
                                        data-test-id="subTotal: 4.99"
                                      >
                                        <FormatPrice
                                          className=""
                                          currency="USD"
                                          fractions={true}
                                          price={4.99}
                                        >
                                          <span
                                            className=""
                                          >
                                            $4.99
                                          </span>
                                        </FormatPrice>
                                      </div>
                                    </SubTotal>
                                    <ShippingCosts
                                      currency="USD"
                                      isDisabled={false}
                                      value={2.99}
                                    >
                                      <div
                                        className="css-13f0gfi "
                                      >
                                        <FormatPrice
                                          className=""
                                          currency="USD"
                                          fractions={true}
                                          price={2.99}
                                        >
                                          <span
                                            className=""
                                          >
                                            $2.99
                                          </span>
                                        </FormatPrice>
                                      </div>
                                    </ShippingCosts>
                                  </div>
                                </li>
                              </GridItem>
                              <GridItem
                                className="css-127o4v1"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-127o4v1 css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <div
                                      className="css-tmwobs"
                                    >
                                      <CheckoutButton
                                        isActive={true}
                                        pushHistory={[Function]}
                                      >
                                        <Connect(Link)
                                          disabled={false}
                                          href="/checkout"
                                        >
                                          <Link
                                            className=""
                                            disabled={false}
                                            historyPush={[Function]}
                                            historyReplace={[Function]}
                                            href="/checkout"
                                            replace={false}
                                            state={Object {}}
                                            tag="div"
                                          >
                                            <div
                                              className="css-c6ki83 "
                                              data-test-id="link: /checkout"
                                              onClick={[Function]}
                                              role="link"
                                            >
                                              <RippleButton
                                                className="css-1mlc9hd"
                                                disabled={false}
                                                flat={false}
                                                onClick={null}
                                                rippleClassName=""
                                                rippleSize={null}
                                                testId="Button"
                                                type="regular"
                                                wrapContent={true}
                                              >
                                                <Button
                                                  className="css-1mlc9hd"
                                                  disabled={false}
                                                  flat={false}
                                                  onClick={null}
                                                  testId="Button"
                                                  type="regular"
                                                  wrapContent={false}
                                                >
                                                  <Button
                                                    className="css-kevfw8 css-1mlc9hd"
                                                    disabled={false}
                                                    onClick={null}
                                                    testId="Button"
                                                  >
                                                    <button
                                                      className="css-kevfw8 css-1mlc9hd css-1rn65c0"
                                                      data-test-id="Button"
                                                      disabled={false}
                                                      onClick={null}
                                                    >
                                                      <Ripple
                                                        className="css-8s1fw2 "
                                                        color="#000"
                                                        disabled={false}
                                                        fill={true}
                                                        onClick={[Function]}
                                                        onComplete={[Function]}
                                                        overflow={false}
                                                        size={null}
                                                      >
                                                        <div
                                                          aria-hidden={true}
                                                          className="css-8s1fw2 "
                                                          data-test-id="Ripple"
                                                          onClick={[Function]}
                                                          style={null}
                                                        >
                                                          <Translate
                                                            className=""
                                                            params={Object {}}
                                                            string="cart.checkout"
                                                          >
                                                            <span
                                                              className=""
                                                            >
                                                              cart.checkout
                                                            </span>
                                                          </Translate>
                                                        </div>
                                                      </Ripple>
                                                    </button>
                                                  </Button>
                                                </Button>
                                              </RippleButton>
                                            </div>
                                          </Link>
                                        </Connect(Link)>
                                      </CheckoutButton>
                                    </div>
                                  </div>
                                </li>
                              </GridItem>
                            </ul>
                          </Grid>
                        </Portal>
                        <Portal
                          name="cart.payment-bar.after"
                          props={null}
                        />
                      </div>
                    </PaymentBarContent>
                  </Consumer>
                </Consume>
              </div>
            </div>
          </Drawer>
        </section>
      </Sheet>
    </PaymentBar>
  </I18nProvider>
</Provider>
`;

exports[`<PaymentBar /> should show formatted shipping costs 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <I18nProvider
    lang="en-US"
    locales={
      Object {
        "shipping.free_short": "Free",
      }
    }
  >
    <PaymentBar
      currency="USD"
      visible={true}
    >
      <Sheet
        animation={
          Object {
            "in": "css-31n36f",
            "out": "css-gyrv08",
          }
        }
        backdrop={false}
        duration={300}
        isOpen={true}
        onClose={[Function]}
        onOpen={[Function]}
        title=""
      >
        <section>
          <Drawer
            alwaysActive={false}
            animation={
              Object {
                "duration": 300,
                "in": "css-31n36f",
                "out": "css-gyrv08",
              }
            }
            className="css-h69706"
            isOpen={true}
            onClose={[Function]}
            onDidClose={[Function]}
            onOpen={[Function]}
          >
            <div
              className="css-h69706 css-1rg7udn css-31n36f"
              onAnimationEnd={[Function]}
              style={
                Object {
                  "animationDuration": "300ms",
                }
              }
            >
              <div
                className="css-1aon90l css-k5vpvg"
                onScroll={[Function]}
              >
                <Consume
                  context={
                    Object {
                      "Consumer": [Function],
                    }
                  }
                  key=".0"
                  onClose={[Function]}
                  props={
                    Object {
                      "setBottom": "setBottom",
                    }
                  }
                >
                  <Consumer>
                    <PaymentBarContent
                      setBottom={
                        [MockFunction] {
                          "calls": Array [
                            Array [
                              0,
                            ],
                            Array [
                              0,
                            ],
                            Array [
                              0,
                            ],
                          ],
                          "results": Array [
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                          ],
                        }
                      }
                    >
                      <div>
                        <Portal
                          name="cart.payment-bar.before"
                          props={null}
                        />
                        <Portal
                          name="cart.payment-bar"
                          props={null}
                        >
                          <Grid
                            className="css-7hjff2"
                            component="ul"
                            wrap={false}
                          >
                            <ul
                              className="css-7hjff2 css-h7r55a"
                            >
                              <GridItem
                                className="css-1e1nulz"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-1e1nulz css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <SubTotalLabel
                                      isDisabled={false}
                                    >
                                      <div
                                        className=""
                                      >
                                        <Translate
                                          className=""
                                          params={Object {}}
                                          string="cart.subtotal"
                                        >
                                          <span
                                            className=""
                                          >
                                            cart.subtotal
                                          </span>
                                        </Translate>
                                        :
                                      </div>
                                    </SubTotalLabel>
                                    <ShippingCostsLabel
                                      isDisabled={false}
                                      shipping={2.99}
                                    >
                                      <div
                                        className="css-1h55xt0 "
                                        data-test-id="shippingLabel"
                                      >
                                        <Translate
                                          className=""
                                          params={Object {}}
                                          string="titles.shipping"
                                        >
                                          <span
                                            className=""
                                          >
                                            titles.shipping
                                          </span>
                                        </Translate>
                                        :
                                      </div>
                                    </ShippingCostsLabel>
                                  </div>
                                </li>
                              </GridItem>
                              <GridItem
                                className="css-127o4v1"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-127o4v1 css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <SubTotal
                                      currency="USD"
                                      isDisabled={false}
                                      value={4.99}
                                    >
                                      <div
                                        className="css-syjz65 "
                                        data-test-id="subTotal: 4.99"
                                      >
                                        <FormatPrice
                                          className=""
                                          currency="USD"
                                          fractions={true}
                                          price={4.99}
                                        >
                                          <span
                                            className=""
                                          >
                                            $4.99
                                          </span>
                                        </FormatPrice>
                                      </div>
                                    </SubTotal>
                                    <ShippingCosts
                                      currency="USD"
                                      isDisabled={false}
                                      value={2.99}
                                    >
                                      <div
                                        className="css-13f0gfi "
                                      >
                                        <FormatPrice
                                          className=""
                                          currency="USD"
                                          fractions={true}
                                          price={2.99}
                                        >
                                          <span
                                            className=""
                                          >
                                            $2.99
                                          </span>
                                        </FormatPrice>
                                      </div>
                                    </ShippingCosts>
                                  </div>
                                </li>
                              </GridItem>
                              <GridItem
                                className="css-127o4v1"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-127o4v1 css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <div
                                      className="css-tmwobs"
                                    >
                                      <CheckoutButton
                                        isActive={true}
                                        pushHistory={[Function]}
                                      >
                                        <Connect(Link)
                                          disabled={false}
                                          href="/checkout"
                                        >
                                          <Link
                                            className=""
                                            disabled={false}
                                            historyPush={[Function]}
                                            historyReplace={[Function]}
                                            href="/checkout"
                                            replace={false}
                                            state={Object {}}
                                            tag="div"
                                          >
                                            <div
                                              className="css-c6ki83 "
                                              data-test-id="link: /checkout"
                                              onClick={[Function]}
                                              role="link"
                                            >
                                              <RippleButton
                                                className="css-1mlc9hd"
                                                disabled={false}
                                                flat={false}
                                                onClick={null}
                                                rippleClassName=""
                                                rippleSize={null}
                                                testId="Button"
                                                type="regular"
                                                wrapContent={true}
                                              >
                                                <Button
                                                  className="css-1mlc9hd"
                                                  disabled={false}
                                                  flat={false}
                                                  onClick={null}
                                                  testId="Button"
                                                  type="regular"
                                                  wrapContent={false}
                                                >
                                                  <Button
                                                    className="css-kevfw8 css-1mlc9hd"
                                                    disabled={false}
                                                    onClick={null}
                                                    testId="Button"
                                                  >
                                                    <button
                                                      className="css-kevfw8 css-1mlc9hd css-1rn65c0"
                                                      data-test-id="Button"
                                                      disabled={false}
                                                      onClick={null}
                                                    >
                                                      <Ripple
                                                        className="css-8s1fw2 "
                                                        color="#000"
                                                        disabled={false}
                                                        fill={true}
                                                        onClick={[Function]}
                                                        onComplete={[Function]}
                                                        overflow={false}
                                                        size={null}
                                                      >
                                                        <div
                                                          aria-hidden={true}
                                                          className="css-8s1fw2 "
                                                          data-test-id="Ripple"
                                                          onClick={[Function]}
                                                          style={null}
                                                        >
                                                          <Translate
                                                            className=""
                                                            params={Object {}}
                                                            string="cart.checkout"
                                                          >
                                                            <span
                                                              className=""
                                                            >
                                                              cart.checkout
                                                            </span>
                                                          </Translate>
                                                        </div>
                                                      </Ripple>
                                                    </button>
                                                  </Button>
                                                </Button>
                                              </RippleButton>
                                            </div>
                                          </Link>
                                        </Connect(Link)>
                                      </CheckoutButton>
                                    </div>
                                  </div>
                                </li>
                              </GridItem>
                            </ul>
                          </Grid>
                        </Portal>
                        <Portal
                          name="cart.payment-bar.after"
                          props={null}
                        />
                      </div>
                    </PaymentBarContent>
                  </Consumer>
                </Consume>
              </div>
            </div>
          </Drawer>
        </section>
      </Sheet>
    </PaymentBar>
  </I18nProvider>
</Provider>
`;

exports[`<PaymentBar /> should show the formatted subtotal 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <I18nProvider
    lang="en-US"
    locales={
      Object {
        "shipping.free_short": "Free",
      }
    }
  >
    <PaymentBar
      currency="USD"
      visible={true}
    >
      <Sheet
        animation={
          Object {
            "in": "css-31n36f",
            "out": "css-gyrv08",
          }
        }
        backdrop={false}
        duration={300}
        isOpen={true}
        onClose={[Function]}
        onOpen={[Function]}
        title=""
      >
        <section>
          <Drawer
            alwaysActive={false}
            animation={
              Object {
                "duration": 300,
                "in": "css-31n36f",
                "out": "css-gyrv08",
              }
            }
            className="css-h69706"
            isOpen={true}
            onClose={[Function]}
            onDidClose={[Function]}
            onOpen={[Function]}
          >
            <div
              className="css-h69706 css-1rg7udn css-31n36f"
              onAnimationEnd={[Function]}
              style={
                Object {
                  "animationDuration": "300ms",
                }
              }
            >
              <div
                className="css-1aon90l css-k5vpvg"
                onScroll={[Function]}
              >
                <Consume
                  context={
                    Object {
                      "Consumer": [Function],
                    }
                  }
                  key=".0"
                  onClose={[Function]}
                  props={
                    Object {
                      "setBottom": "setBottom",
                    }
                  }
                >
                  <Consumer>
                    <PaymentBarContent
                      setBottom={
                        [MockFunction] {
                          "calls": Array [
                            Array [
                              0,
                            ],
                            Array [
                              0,
                            ],
                          ],
                          "results": Array [
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                            Object {
                              "isThrow": false,
                              "value": undefined,
                            },
                          ],
                        }
                      }
                    >
                      <div>
                        <Portal
                          name="cart.payment-bar.before"
                          props={null}
                        />
                        <Portal
                          name="cart.payment-bar"
                          props={null}
                        >
                          <Grid
                            className="css-7hjff2"
                            component="ul"
                            wrap={false}
                          >
                            <ul
                              className="css-7hjff2 css-h7r55a"
                            >
                              <GridItem
                                className="css-1e1nulz"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-1e1nulz css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <SubTotalLabel
                                      isDisabled={false}
                                    >
                                      <div
                                        className=""
                                      >
                                        <Translate
                                          className=""
                                          params={Object {}}
                                          string="cart.subtotal"
                                        >
                                          <span
                                            className=""
                                          >
                                            cart.subtotal
                                          </span>
                                        </Translate>
                                        :
                                      </div>
                                    </SubTotalLabel>
                                    <ShippingCostsLabel
                                      isDisabled={false}
                                      shipping={2.99}
                                    >
                                      <div
                                        className="css-1h55xt0 "
                                        data-test-id="shippingLabel"
                                      >
                                        <Translate
                                          className=""
                                          params={Object {}}
                                          string="titles.shipping"
                                        >
                                          <span
                                            className=""
                                          >
                                            titles.shipping
                                          </span>
                                        </Translate>
                                        :
                                      </div>
                                    </ShippingCostsLabel>
                                  </div>
                                </li>
                              </GridItem>
                              <GridItem
                                className="css-127o4v1"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-127o4v1 css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <SubTotal
                                      currency="USD"
                                      isDisabled={false}
                                      value={4.99}
                                    >
                                      <div
                                        className="css-syjz65 "
                                        data-test-id="subTotal: 4.99"
                                      >
                                        <FormatPrice
                                          className=""
                                          currency="USD"
                                          fractions={true}
                                          price={4.99}
                                        >
                                          <span
                                            className=""
                                          >
                                            $4.99
                                          </span>
                                        </FormatPrice>
                                      </div>
                                    </SubTotal>
                                    <ShippingCosts
                                      currency="USD"
                                      isDisabled={false}
                                      value={2.99}
                                    >
                                      <div
                                        className="css-13f0gfi "
                                      >
                                        <FormatPrice
                                          className=""
                                          currency="USD"
                                          fractions={true}
                                          price={2.99}
                                        >
                                          <span
                                            className=""
                                          >
                                            $2.99
                                          </span>
                                        </FormatPrice>
                                      </div>
                                    </ShippingCosts>
                                  </div>
                                </li>
                              </GridItem>
                              <GridItem
                                className="css-127o4v1"
                                component="li"
                                grow={1}
                                shrink={1}
                              >
                                <li
                                  className="css-127o4v1 css-1gs0ko2"
                                >
                                  <div
                                    className="css-w6053m"
                                  >
                                    <div
                                      className="css-tmwobs"
                                    >
                                      <CheckoutButton
                                        isActive={true}
                                        pushHistory={[Function]}
                                      >
                                        <Connect(Link)
                                          disabled={false}
                                          href="/checkout"
                                        >
                                          <Link
                                            className=""
                                            disabled={false}
                                            historyPush={[Function]}
                                            historyReplace={[Function]}
                                            href="/checkout"
                                            replace={false}
                                            state={Object {}}
                                            tag="div"
                                          >
                                            <div
                                              className="css-c6ki83 "
                                              data-test-id="link: /checkout"
                                              onClick={[Function]}
                                              role="link"
                                            >
                                              <RippleButton
                                                className="css-1mlc9hd"
                                                disabled={false}
                                                flat={false}
                                                onClick={null}
                                                rippleClassName=""
                                                rippleSize={null}
                                                testId="Button"
                                                type="regular"
                                                wrapContent={true}
                                              >
                                                <Button
                                                  className="css-1mlc9hd"
                                                  disabled={false}
                                                  flat={false}
                                                  onClick={null}
                                                  testId="Button"
                                                  type="regular"
                                                  wrapContent={false}
                                                >
                                                  <Button
                                                    className="css-kevfw8 css-1mlc9hd"
                                                    disabled={false}
                                                    onClick={null}
                                                    testId="Button"
                                                  >
                                                    <button
                                                      className="css-kevfw8 css-1mlc9hd css-1rn65c0"
                                                      data-test-id="Button"
                                                      disabled={false}
                                                      onClick={null}
                                                    >
                                                      <Ripple
                                                        className="css-8s1fw2 "
                                                        color="#000"
                                                        disabled={false}
                                                        fill={true}
                                                        onClick={[Function]}
                                                        onComplete={[Function]}
                                                        overflow={false}
                                                        size={null}
                                                      >
                                                        <div
                                                          aria-hidden={true}
                                                          className="css-8s1fw2 "
                                                          data-test-id="Ripple"
                                                          onClick={[Function]}
                                                          style={null}
                                                        >
                                                          <Translate
                                                            className=""
                                                            params={Object {}}
                                                            string="cart.checkout"
                                                          >
                                                            <span
                                                              className=""
                                                            >
                                                              cart.checkout
                                                            </span>
                                                          </Translate>
                                                        </div>
                                                      </Ripple>
                                                    </button>
                                                  </Button>
                                                </Button>
                                              </RippleButton>
                                            </div>
                                          </Link>
                                        </Connect(Link)>
                                      </CheckoutButton>
                                    </div>
                                  </div>
                                </li>
                              </GridItem>
                            </ul>
                          </Grid>
                        </Portal>
                        <Portal
                          name="cart.payment-bar.after"
                          props={null}
                        />
                      </div>
                    </PaymentBarContent>
                  </Consumer>
                </Consume>
              </div>
            </div>
          </Drawer>
        </section>
      </Sheet>
    </PaymentBar>
  </I18nProvider>
</Provider>
`;
